# glitchtip-backend

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG  CONTRIBUTING.md  Dockerfile  Makefile  README.md  app.py  compose.locust.yml  compose.partman.yml  compose.yml  docker-compose.partman.yml  docker-compose.yml  pyproject.toml
.zed/: settings.json
apps/alerts/: api.py  constants.py  email.py  models.py  schema.py  tasks.py  webhooks.py
apps/alerts/migrations/: 0001_squashed_0010_alter_notification_issues.py  0011_alertrecipient_metadata_fields_squashed_0012_alertrecipient_tags_to_add.py  0011_alertrecipient_tags_to_add.py
apps/alerts/tests/: test_api.py  test_tasks.py  test_webhooks.py
apps/api_tokens/: schema.py
apps/difs/: api.py  stacktrace_processor.py  tasks.py  tests.py
apps/djstripe_ext/: __init__.py  api.py  app.py  apps.py  hooks.py  schema.py
apps/djstripe_ext/migrations/: 0002_delete_subscriptionquotawarning.py
apps/djstripe_ext/tests/: tests.py
apps/environments/: schema.py
apps/environments/migrations/: 0001_squashed_0004_alter_environment_name.py  0004_alter_environment_name.py
apps/event_ingest/: api.py  authentication.py  embed_api.py  interfaces.py  javascript_event_processor.py  model_functions.py  process_event.py  schema.py  tasks.py  utils.py  views.py
apps/event_ingest/tests/: test_authentication.py  test_embed_api.py  test_envelope_api.py  test_process_issue_event.py  test_security_api.py  test_store_api.py  test_utils.py  utils.py
apps/files/: api.py  assemble.py  models.py  tasks.py
apps/files/migrations/: 0001_squashed_0009_alter_file_size.py  0009_alter_file_size.py  0010_file_debug_id_file_last_used.py
apps/files/tests/: test_api.py  test_tasks.py
apps/importer/: importer.py
apps/issue_events/: constants.py  models.py  schema.py  utils.py
apps/issue_events/api/: __init__.py  api.py  comments.py  events.py  hashes.py  issues.py
apps/issue_events/migrations/: 0001_initial.py  0002_issueevent_hashes_and_more.py  0003_auto_20250527_2204.py  0004_auto_20250617_1407.py  0004_auto_20250626_1630.py  0005_issue_issue_title_trgm_idx.py  0006_replace_tsvector_function.py
apps/issue_events/tests/: test_comments_api.py  test_db_functions.py  test_issue_event_api.py  test_issue_hash_api.py  test_issues_api.py  test_utils.py
apps/observability/: constants.py  metrics.py  tests.py  utils.py
apps/organizations_ext/: admin.py  api.py  constants.py  email.py  fields.py  models.py  queryset_utils.py  schema.py  tasks.py
apps/organizations_ext/migrations/: 0001_squashed_0008_merge_20250210_1625.py  0005_organization_event_throttle_rate.py  0006_organization_stripe_subscription_id.py  0006_organizationsocialapp.py  0007_rename_stripe_subscription_id_organization_stripe_customer_id.py  0008_merge_20250210_1625.py  0009_organization_stripe_primary_subscription.py  0010_alter_organization_id.py
apps/organizations_ext/tests/: test_api.py  test_api_permissions.py  test_nested_views.py  test_organization_socialapp.py  test_organization_users.py  test_throttling.py
apps/performance/: admin.py  api.py  models.py
apps/performance/migrations/: 0001_squashed_0014_initial.py  0014_initial.py  0015_transactiongroup_is_deleted.py  0016_alter_transactiongroup_unique_together_and_more.py  0017_remove_transactionevent_duration_and_more.py
apps/performance/tests/: test_api.py  test_models.py
apps/projects/: api.py  models.py  schema.py
apps/projects/migrations/: 0001_squashed_0016_auto_20250125_1733.py  0014_auto_20240318_1449.py  0015_rename_label_projectkey_name_projectkey_is_active.py  0016_auto_20250125_1733.py  0017_auto_20250627_1413.py  0018_auto_20251117_2129.py
apps/projects/tests/: test_api.py
apps/releases/: admin.py  api.py  models.py  schema.py
apps/releases/migrations/: 0001_squashed_0004_alter_release_id_alter_releasefile_id_and_more.py  0005_alter_releasefile_unique_together_and_more.py  0006_alter_release_files_delete_releasefile.py  0007_alter_release_files.py
apps/releases/tests/: test_permissions.py
apps/shared/: migration_utils.py
apps/shared/schema/: base.py  contexts.py  csp.py  error.py  event.py  exception.py  message.py  user.py  utils.py
apps/sourcecode/: admin.py  api.py  maintenance.py  models.py  schema.py
apps/sourcecode/migrations/: 0001_initial.py  0002_alter_debugsymbolbundle_file_and_more.py
apps/sourcecode/tests/: test_api.py  test_maintenance.py  test_sourcemap_workflow.py
apps/stats/: api.py  schema.py
apps/stats/tests/: test_api_permissions.py  tests.py
apps/stripe/: admin.py  api.py  client.py  constants.py  exceptions.py  maintenance.py  models.py  schema.py  tests.py  utils.py  views.py
apps/stripe/migrations/: 0001_initial.py  0001_squashed_0006_stripeproduct_name.py  0001_squashed_0011_remove_stripesubscription_is_active_and_more.py  0002_stripesubscription_is_active.py  0003_stripesubscription_is_primary.py  0004_stripesubscription_unique_primary_subscription_per_organization.py  0006_stripeproduct_name.py  (+10 more)
apps/teams/: schema.py
apps/uptime/: email.py  models.py  schema.py  tasks.py  utils.py  webhooks.py
apps/users/: apps.py  schema.py  signals.py  utils.py
apps/wizard/: api.py
events/migrations/: 0001_squashed_0003_auto_20210219_1951.py
glitchtip/: __init__.py  adapters.py  base_commands.py  base_models.py  email.py  lookups.py  middleware.py  model_utils.py  partitioning.py  schema.py  settings.py  tasks.py  tests.py  urls.py  utils.py  views.py
glitchtip/api/: api.py  pagination.py  parsers.py
glitchtip/templatetags/: strip.py
glitchtip/test_utils/: generators.py  test_case.py
issues/migrations/: 0001_squashed_0010_auto_20210117_1543.py
sentry/middleware/: proxy.py
templates/email/: email_base.html
test_api/: tests.py  views.py
(+28 files in other folders)
