[project]
name = "glitchtip-backend"
version = "0.1.0"
description = "Django backend that powers GlitchTip, an open source reimplementation of Sentry"
authors = ["David Burke"]
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "Brotli>=1.2.0",
    "django~=5.2",
    "django-allauth[mfa,socialaccount]~=65.0",
    "django-cors-headers~=4.0",
    "django-environ~=0.11",
    "django-extensions~=4.0",
    "django-organizations~=2.3",
    "django-storages[boto3,azure,google]~=1.12",
    "uWSGI~=2.0",
    "whitenoise~=6.0",
    "sentry-sdk~=2.20",
    "celery[redis,sqlalchemy]~=5.5",
    "cxxfilt~=0.3.0",
    "django-anymail~=13.0",
    "django-csp~=4.0",
    "user-agents~=2.1",
    "django-ipware~=7.0",
    "anonymizeip~=1.0",
    "symbolic~=12.17.0",
    "aiohttp~=3.7",
    "google-cloud-logging~=3.0",
    "django-prometheus~=2.2",
    "uwsgi-chunked~=0.1",
    "django-import-export~=4.1",
    "psycopg[c,pool]~=3.1",
    "uvicorn~=0.30",
    "gunicorn~=23.0",
    "django-ninja~=1.5",
    "boto3~=1.34",
    "orjson~=3.9",
    "pydantic[email]~=2.11",
    "celery-batches>=0.10",
    "django-ninja-cursor-pagination>=0.1.0",
    "django-postgres-partition>=0.1.4",
    "pyyaml>=6.0.2", # allauth openapi spec
    "django-valkey[libvalkey,lz4]>=0.3.2",
]

[dependency-groups]
dev = [
    "locust~=2.10",
    "freezegun~=1.1",
    "model_bakery~=1.1",
    "django-debug-toolbar~=6.0",
    "django-stubs[compatible-mypy]~=5.0",
    "django-sslserver~=0.22",
    "aioresponses~=0.7",
    "requests-mock~=1.9",
    "memray~=1.9",
    "ruff~=0.6",
    "tblib~=3.0",                         # Needed for test --parallel
    "ipython>=8.32.0",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"*/migrations/*.py" = ["I"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "glitchtip.settings"

[tool.pyright]
venvPath = "."
venv = ".venv"
